docs(copilot): add project instructions and workflow guidelines
- Add main copilot instructions with stack and principles to ___.instructions.md
- Add comprehensive development workflow to dev-flow.instructions.md
- Remove unused commit prompt file
- Configure MCP servers (next-devtools and github)

Closes #4

--- a/.github/instructions/___.instructions.md
+++ b/.github/instructions/___.instructions.md
@@ -2,3 +2,63 @@
 applyTo: '**'
 ---
 
+# Copilot — Main Overview (Stack, Principles, Workflow)
+
+## Stack
+
+This project uses the following technologies and tools. Always adhere to these versions and practices for consistency and compatibility.
+
+- **Next.js 16 (App Router + SRC-DIR)**: Use the App Router for routing and layout. Structure pages in `app/` directory with `page.tsx` files.
+- **React 19.2**: Leverage the latest React features, such as hooks and concurrent rendering.
+- **TypeScript 5**: Enforce strict typing. Define interfaces and types explicitly for all data structures.
+- **Tailwind 4 + Shadcn**: Use Tailwind for utility-first CSS. Integrate Shadcn components for pre-built UI elements. Customize via Tailwind classes.
+- **PNPM**: Use PNPM as the package manager for faster installs and better dependency management.
+- **Node.js 22+**: Ensure your environment runs Node.js version 22 or higher.
+- **Tools**:
+  - Use the `#context7` tool to consult package documentation: When unsure about a package's API, query `#context7 [package name]` for details.
+  - Use the `#todos` tool to manage tasks and reminders: Create tasks like `#todos Add user authentication` to track progress.
+
+## Principles
+
+Follow these principles to ensure production-quality code. Each principle includes actionable instructions.
+
+- **Production Quality: Simple is better than Complex, Explicit is better than Implicit**:
+  - Prefer straightforward solutions over over-engineered ones. For example, use built-in React hooks instead of custom abstractions unless necessary.
+  - Avoid implicit behavior; always state intentions clearly in code.
+
+- **Explicit Types (Never Reference `any`)**:
+  - Define TypeScript types for all variables, functions, and props. For instance, instead of `let data: any;`, use `let data: UserData;`.
+  - Small and Deterministic Functions: Keep functions focused on one task, with predictable outputs. Limit to 10-20 lines per function.
+  - Small Reusable and Composable Components: Break down UI into small, reusable components. Each component should ideally be under 100 lines of code.
+
+- **Make it clear**:
+  - NEVER NEST TERNARY OPERATORS (i.e., `condition ? expr1 : expr2 ? expr3 : expr4`)
+  - NEVER USE DOUBLE CASTING (i.e., `value as unknown as TargetType`)
+
+- **Fail Fast: Early Validation, Clear Messages**:
+  - Validate inputs at the start of functions using TypeScript guards or assertions. For example, throw an error if a required prop is missing.
+  - Provide descriptive error messages, e.g., `throw new Error('Invalid email format');`.
+
+- **Comments Only When Logic is Not Obvious**:
+  - Add comments sparingly. Only explain non-trivial logic, such as complex algorithms or business rules.
+
+- **Consistent and Accessible UI**:
+  - Use auto layout (e.g., Flexbox in Tailwind) and consistent spacing (e.g., `p-4` for padding).
+  - Prioritize responsive and mobile-first design: Start with mobile styles and use breakpoints like `md:` for larger screens.
+  - Ensure accessibility with semantic HTML and ARIA attributes where needed.
+
+- **Prefer Lean and Objective page.tsx Pages**:
+  - Keep page components minimal. Import and reuse components from `src/components/**/*.tsx`.
+  - Avoid inline styles or logic; delegate to dedicated components. For example, instead of writing a form directly in `page.tsx`, use `<ContactForm />` from components.
+
+## Tooling
+
+To maintain efficiency in development:
+
+- Start by planning with `#todos` for new features.
+- Consult the tools as needed during implementation.
+- Write code following the principles, then test and iterate.
+
+## Legacy code
+
+- Always remove legacy code when modifying or adding new features. Do not leave unused code in the codebase.
