docs(instructions): refine development workflow and guidelines
- add explicit no-emoji rule to main instructions
- clarify local vs remote operations in dev-flow
- emphasize use of terminal for git operations
- remove legacy commit.prompt.md file

Closes #6

--- a/.github/instructions/___.instructions.md
+++ b/.github/instructions/___.instructions.md
@@ -4,6 +4,8 @@ applyTo: '**'
 
 # Copilot — Main Overview (Stack, Principles, Workflow)
 
+NEVER USE EMOJIS. I HATE EMOJIS.
+
 ## Stack
 
 This project uses the following technologies and tools. Always adhere to these versions and practices for consistency and compatibility.
